// notes.proto
syntax = "proto3";

import "google/protobuf/empty.proto";

//services
service NoteService {
    rpc List (google.protobuf.Empty) returns (NoteListResponse);
    rpc Find (NoteFindRequest) returns (NoteFindResponse);
}

//entities
//message Void {}

message Note {
    int32 id = 1;
    string title = 2;
    string description = 3;
  }

//requests
message NoteFindRequest {
    int32 id = 1;
  }

//responses
message NoteFindResponse {
  Note note = 1;
}

message NoteListResponse {
    repeated Note notes = 1;
  }